# ML-Service-with-FastAPI-Celery-Redis-and-RabbitMQ

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tmain.py  tworker.py  worker.py
.docker/: .dockerignore  Dockerfile
docker/app/: Dockerfile
docker/worker/: Dockerfile
src/: Dockerfile  app.py  constants.py  entrypoint.sh  pyproject.toml
src/celery/: Dockerfile  celinit.py  start.py  tasks.py  worker.py
src/middleware/: cors.py  logging.py
src/schemas/: healthcheck.py  prediction.py
src/services/: lifespan.py  model.py  utils.py
src/worker/: tasks.py
