[tool.poetry]
name = "ML Service with FastAPI, Celery, Redis and RabbitMQ"
version = "0.1.2"
description = "Hi-loaded Model Service API example to predict the sentiment for the input text"
authors = ["Dmitry P. codeyield <dppostbox@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
loguru = "^0.7.2"
celery = {extras = ["redis"], version = "^5.4.0"}
rabbitmq = "^0.2.0"
transformers = "^4.41.2"
torch = "^2.3.0"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
